--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="home.css" />
+  <link rel="stylesheet" href="./css/home.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,7 +16,7 @@
   <nav id="nav">
     <div class="nav-data">
       <div class="logo">
-        <img  src="c6c1f9d3-d9da-4f58-9623-d987f3346973__1_-removebg-preview.png" alt="">
+        <img  src="./img/c6c1f9d3-d9da-4f58-9623-d987f3346973__1_-removebg-preview.png" alt="">
       </div>
       <div class="control">
         <div>home</div>
@@ -296,7 +296,7 @@
     </div>
   </footer>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="home.js"></script>
+  <script src="./js/home.js"></script>
   <script>
     AOS.init({
       once: true,
